Restructured the repo slightly and added the required files in order to serve a swagger page.

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,7 @@
 
 /.vs
 /src/obj
-/src/appsettings.Development.json
-/obj
-/bin
-/appsettings.Development.json
-/Properties
+/src/bin
+/src/Properties
+*appsettings.Development.json
 *.csproj.user
