Add encryption implementation + example

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -6,5 +6,9 @@
     "TokenEndpoint": "",
     "ClientId": "",
     "ClientSecret": ""
+  },
+  "EncryptionConfig": {
+    "KeyId": "",
+    "PrivateKey": ""
   }
 }
