Added PersonalId and Address fields to candidate details
Introduced a new `PartnerAddressDto` class to represent address details with encryption support. Updated various invitation DTOs to include `PersonalId` and optional `Address` fields. Upgraded project to .NET 8.0, enabled nullable reference types, and refined the `.gitignore` file for better compatibility.

--- a/src/SamplePartnerApiConnector.csproj
+++ b/src/SamplePartnerApiConnector.csproj
@@ -1,10 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
     <RootNamespace>Talentech.EvaluationApi.SamplePartnerApiConnector</RootNamespace>
     <LangVersion>default</LangVersion>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <PropertyGroup>
